# Taiwan_Job_Market_Analysis

./: .env.example  .gitignore  Data_from_bronze.json  Python相關工具與技能.pbix  README.md  TJMA.code-workspace  description_df.csv  docker-compose.yml  future_work.md  id_with_purpose_df.csv  main.py  ps.md  pyproject.toml  pyrightconfig.json  test.ipynb  test2.ipynb  to-do.md  todo.md  walkthrough.md  ~$程式介紹與展示.pptx  程式介紹與展示.pptx  講稿.docx
backend/: .gitignore  pyproject.toml
config/: config_log.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
init/: init_users.sh  mysql_init.sh
interfaces/: interfaces.py
result/: all__exact_salary.csv  all__job_name.csv  all__skills.csv  all__specialtys.csv  all_job_name.csv  all_negotiable_salary.csv  python_related_exact_salary.csv  python_related_job_name.csv  python_related_negotiable_salary.csv  python_related_skills.csv  python_related_specialtys.csv  python_taipei_exact_salary.csv  python_taipei_job_name.csv  python_taipei_negotiable_salary.csv  python_taipei_skills.csv  python_taipei_specialtys.csv
results/: python_taipei_job_name.csv  python_taipei_skills.csv  python_taipei_specialtys.csv  taipei_python_skills.csv  taipei_python_specialtys.csv
services/: area_category_for_transformer.json  cleaner.py  config_log.py  crawler.py  db.py  graph.py  repo.py
services/crawler/: .dockerignore  .env.example  Dockerfile  dockerfile  ps.md  pyproject.toml  requirements.txt  test2.ipynb  (+1 more)
services/web_server/: .env.example  ARCHITECTURE.md  Dockerfile  README.md  all.md  main.py  pyproject.toml
services/web_server/config/: config_log.py
services/web_server/src/: __init__.py  main.py
services/web_server/src/db/: __init__.py  repository.py
services/web_server/src/models/: __init__.py  dashboard.py
services/web_server/src/routers/: __init__.py  dashboard.py
src/: main.py
(+37 files in other folders)
